update rambam and aimi mobile videos, fix header size on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -17,6 +17,10 @@
     height: $space-100;
     display: flex;
     align-items: center;
+    @media (max-width: 480px) {
+      width: 75px;
+      height: 13px;
+    }
   }
   @media (max-width: 480px) {
     left: 20px;
