--- a/src/styles/aimi.module.scss
+++ b/src/styles/aimi.module.scss
@@ -18,7 +18,25 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
+      @media (max-width: 600px) {
+        display: none;
+      }
+      &_mob {
+        display: none;
+        video {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+        @media (max-width: 600px) {
+          display: block;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+        }
+      }
       video {
         object-fit: cover;
         width: 100%;
