--- a/src/styles/rambam.module.scss
+++ b/src/styles/rambam.module.scss
@@ -7,12 +7,30 @@
     width: 100vw;
     height: 100vh;
     background-color: #1b1b1b;
+    @media (max-width: 600px) {
+      display: none;
+    }
     video {
       width: 100%;
       height: 100%;
       z-index: 1;
     }
-
+    &_mob {
+      display: none;
+      video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+      @media (max-width: 600px) {
+        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+      }
+    }
     @media (max-width: 1600px) {
       object-fit: contain;
     }
